# FasterCap

./: AboutBox.cpp  AboutBox.h  AutomationHelper.cpp  AutomationHelper.h  CMakeLists.txt  CmdLineParser.cpp  CmdLineParser.h  FasterCap.cbp  FasterCap.layout  FasterCapApp.cpp  FasterCapApp.h  FasterCapConsole.cpp  FasterCapConsole.h  FasterCapGlobal.cpp  FasterCapGlobal.h  FasterCapMain.cpp  FasterCapMain.h  History.txt  IFasterCap.idl  IFasterCap_x64.tlb  IFasterCap_x86.tlb  LicenseBox.cpp  LicenseBox.h  README.md  ReadMe.txt  RunDialog.cpp  RunDialog.h  registry3264.cpp  registry3264.h  resource.rc  stdafx.h  test.cpp  test.h  wx_pch.h
Solver/: AutoConductor.cpp  AutoConductor.h  AutoElement.cpp  AutoElement.h  AutoPanel.cpp  AutoPanel.h  AutoSegment.cpp  AutoSegment.h  Autorefine.cpp  Autorefine.h  CMakeLists.txt  MultiplyHierarchical.cpp  MultiplyHierarchical.h  Potential.cpp  Potential.h  SolveCapacitance.cpp  SolveCapacitance.h  SolverGlobal.cpp  SolverGlobal.h  SphereGen.cpp  SphereGen.h
hlp/: FasterCap.hhc  FasterCap.hhp  WelcometoFasterCap.htm
hlp/Automation/: AutomationExamples.htm  FasterCapAutomationOverview.htm  GetCapacitanceMethod.htm  GetCondNamesMethod.htm  GetConductanceMethod.htm  GetReturnStatusMethod.htm  GetSolveMemoryMethod.htm  GetSolveTimeMethod.htm  IsRunningProperty.htm  QuitMethod.htm  RunMethod.htm  SetEndCallbackMethod.htm  SetLogCallbackMethod.htm  ShowWindowMethod.htm  StopMethod.htm
hlp/InputFile/: InputFile_main.htm  InputFile_single_file.htm
hlp/InputFile/2D/: InputFile_2D_ch02.htm  InputFile_2D_ch03.htm  InputFile_2D_ch04.htm  InputFile_2D_ch05.htm  InputFile_2D_ch07.htm
hlp/InputFile/3D/: InputFile_3D_ch02.htm  InputFile_3D_ch03.htm  InputFile_3D_ch04.htm  InputFile_3D_ch05.htm  InputFile_3D_ch06.htm  InputFile_3D_ch07.htm
hlp/Output/: Output_ch01.htm  Output_ch02.htm  Output_ch03.htm  Output_ch04.htm
hlp/Run/: Run_ch01.htm  Run_ch02.htm  Run_ch03.htm
res/: FasterCap_16x16.xpm  FasterCap_32x32.xpm
wxsmith/: AboutBox.wxs  FasterCapframe.wxs  LicenseBox.wxs  RunDialog.wxs
